<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/main_layout" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/frontlightswitch_item" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="24.0dip">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:textSize="@dimen/title_text_size" android:textColor="@android:color/black" android:background="@color/colorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:text="@string/frontlight_title" />
                <Switch android:gravity="right|center" android:id="@id/frontlight_switch" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="30.0dip" android:textOn="@string/switch_on" android:textOff="@string/switch_off" style="@style/CinnySwitchStyle" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/brightness_setting_item" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip">
            <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:textSize="@dimen/title_text_size" android:textColor="@android:color/black" android:gravity="center_vertical" android:background="@color/colorPrimary" android:paddingLeft="8.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="@dimen/textview_height" android:text="@string/brightness_title" android:alpha="255.0" />
                <TextView android:textSize="@dimen/value_text_size" android:textColor="@android:color/black" android:gravity="right|center" android:id="@id/brightness_text_value" android:background="@color/colorPrimary" android:paddingLeft="8.0dip" android:paddingBottom="2.0dip" android:layout_width="@dimen/value_textview_width" android:layout_height="@dimen/value_textview_height" android:alpha="255.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <LinearLayout android:gravity="center" android:id="@id/brightness_item" android:layout_width="@dimen/imagebutton_width" android:layout_height="@dimen/imagebutton_width" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip">
                    <ImageView android:background="@drawable/ic_brightness" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:id="@id/brightness_decrease_button" android:layout_width="@dimen/imagebutton_width" android:layout_height="@dimen/imagebutton_width" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip">
                    <ImageView android:background="@drawable/ntx_button_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/mo_minus_mt" />
                </LinearLayout>
                <SeekBar android:layout_gravity="center" android:id="@id/brightness_seekBar" android:background="@android:color/white" android:layout_width="0.0dip" android:layout_height="wrap_content" android:maxHeight="@dimen/seekbar_maxheight" android:progressDrawable="@drawable/pg_brightness" android:minHeight="@dimen/seekbar_minheight" android:thumb="@drawable/seekbar_thumb" android:layout_weight="1.0" />
                <LinearLayout android:gravity="center" android:id="@id/brightness_increase_button" android:layout_width="@dimen/imagebutton_width" android:layout_height="@dimen/imagebutton_width" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip">
                    <ImageView android:background="@drawable/ntx_button_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/mo_plus_mt" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/colour_setting_item" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip">
            <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:textSize="32.0dip" android:textColor="@android:color/black" android:gravity="center_vertical" android:background="@color/colorPrimary" android:paddingLeft="8.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="@dimen/textview_height" android:text="@string/colour_title" android:alpha="255.0" />
                <TextView android:textSize="28.0dip" android:textColor="@android:color/black" android:gravity="right|center" android:id="@id/colour_text_value" android:background="@color/colorPrimary" android:paddingLeft="8.0dip" android:paddingBottom="2.0dip" android:layout_width="@dimen/value_textview_width" android:layout_height="@dimen/value_textview_height" android:alpha="255.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <LinearLayout android:gravity="center" android:id="@id/colour_item" android:layout_width="@dimen/imagebutton_width" android:layout_height="@dimen/imagebutton_width" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip">
                    <ImageView android:background="@drawable/ic_temperature" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:id="@id/colour_temperature_decrease_button" android:layout_width="@dimen/imagebutton_width" android:layout_height="@dimen/imagebutton_height" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip">
                    <ImageView android:background="@drawable/ntx_button_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/mo_minus_mt" />
                </LinearLayout>
                <SeekBar android:layout_gravity="center" android:id="@id/colour_temperature_seekBar" android:background="@android:color/white" android:layout_width="0.0dip" android:layout_height="wrap_content" android:maxHeight="@dimen/seekbar_minheight" android:progressDrawable="@drawable/pg_brightness" android:minHeight="@dimen/seekbar_maxheight" android:thumb="@drawable/seekbar_thumb" android:layout_weight="1.0" />
                <LinearLayout android:gravity="center" android:id="@id/colour_temperature_increase_button" android:layout_width="@dimen/imagebutton_width" android:layout_height="@dimen/imagebutton_height" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip">
                    <ImageView android:background="@drawable/ntx_button_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/mo_plus_mt" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:background="@drawable/bg_bottom_line" android:paddingTop="@dimen/item_line_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/gamma_setting_item" android:paddingLeft="8.0dip" android:paddingTop="10.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip">
            <LinearLayout android:layout_gravity="center" android:id="@id/gamma_image_linear_layout" android:background="@drawable/preview_whiteness_threshold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="16.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:textSize="@dimen/title_text_size" android:textColor="@android:color/black" android:gravity="center_vertical" android:background="@color/colorPrimary" android:paddingLeft="16.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="@dimen/textview_height" android:text="@string/gamma_title" android:alpha="255.0" />
                <TextView android:textSize="28.0dip" android:textColor="@android:color/black" android:gravity="right|center" android:id="@id/gamma_text_value" android:background="@color/colorPrimary" android:paddingLeft="8.0dip" android:paddingBottom="2.0dip" android:visibility="gone" android:layout_width="@dimen/value_textview_width" android:layout_height="@dimen/value_textview_height" android:alpha="255.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="26.0dip">
                <LinearLayout android:gravity="center" android:id="@id/gamma_item" android:layout_width="@dimen/imagebutton_width" android:layout_height="@dimen/imagebutton_width" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip">
                    <ImageView android:background="@drawable/ic_contrast" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:id="@id/gamma_decrease_button" android:layout_width="@dimen/imagebutton_width" android:layout_height="@dimen/imagebutton_height" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip">
                    <ImageView android:background="@drawable/ntx_button_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/mo_minus_mt" />
                </LinearLayout>
                <SeekBar android:layout_gravity="center" android:id="@id/gamma_seekBar" android:background="@android:color/white" android:layout_width="0.0dip" android:layout_height="wrap_content" android:maxHeight="@dimen/seekbar_minheight" android:progressDrawable="@drawable/pg_brightness" android:minHeight="@dimen/seekbar_maxheight" android:thumb="@drawable/seekbar_thumb" android:layout_weight="1.0" />
                <LinearLayout android:gravity="center" android:id="@id/gamma_increase_button" android:layout_width="@dimen/imagebutton_width" android:layout_height="@dimen/imagebutton_height" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip">
                    <ImageView android:background="@drawable/ntx_button_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/mo_plus_mt" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/whiteness_setting_item" android:paddingLeft="8.0dip" android:paddingTop="16.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:textSize="@dimen/title_text_size" android:textColor="@android:color/black" android:gravity="center_vertical" android:background="@color/colorPrimary" android:paddingLeft="16.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="@dimen/textview_height" android:text="@string/whiteness_title" android:alpha="255.0" />
                <TextView android:textSize="28.0dip" android:textColor="@android:color/black" android:gravity="right|center" android:id="@id/whiteness_text_value" android:background="@color/colorPrimary" android:paddingLeft="8.0dip" android:paddingBottom="2.0dip" android:visibility="visible" android:layout_width="@dimen/value_textview_width" android:layout_height="@dimen/value_textview_height" android:alpha="0.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="26.0dip">
                <LinearLayout android:gravity="center" android:id="@id/whiteness_item" android:layout_width="@dimen/imagebutton_width" android:layout_height="@dimen/imagebutton_width" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip">
                    <ImageView android:background="@drawable/ic_whiteness" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:id="@id/whiteness_decrease_button" android:layout_width="@dimen/imagebutton_width" android:layout_height="@dimen/imagebutton_height" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip">
                    <ImageView android:background="@drawable/ntx_button_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/mo_minus_mt" />
                </LinearLayout>
                <SeekBar android:layout_gravity="center" android:id="@id/whiteness_seekBar" android:background="@android:color/white" android:layout_width="0.0dip" android:layout_height="wrap_content" android:maxHeight="@dimen/seekbar_minheight" android:progressDrawable="@drawable/pg_brightness" android:minHeight="@dimen/seekbar_maxheight" android:thumb="@drawable/seekbar_thumb" android:layout_weight="1.0" />
                <LinearLayout android:gravity="center" android:id="@id/whiteness_increase_button" android:layout_width="@dimen/imagebutton_width" android:layout_height="@dimen/imagebutton_height" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip">
                    <ImageView android:background="@drawable/ntx_button_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/mo_plus_mt" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
